# ezsql

./: .env.example  .gitignore  .gitmodules  Readme.md  calculate_impact.py  classifier_checkpoint.json  docker-compose.yml  grimoire_classifier_v3.json  justfile  labels.tsv  mapping.json  processed_sources.csv  pyproject.toml  query_classifications.tsv  query_intents_output.txt  query_to_text.py  read_parquet.py  read_parquet_ollama.py  read_parquet_v2.py  sql_intent_parser.py  sql_intent_processor_batched.py  sql_narrator.py  sql_narrator_ollama.py  sql_query_classifer.py  tesssssss.html  test.html  tete.html  tetess.html
ai_genareted_html/: tette.html  ttttttttt.html  vava.html
ai_genareted_scripts/: classifier_checkpoint.json  pyproject.toml  read_parquet.py  sql_intent_processor_batched.py  sql_narrator_ollama.py
ai_test_scripts/: query_classifications.tsv  read_parquet_ollama.py
aidelml/: self_improving_solution.py
aidelml_visual/: app.py  self_improving_solution.py
aidelml_visual/db_local/: connection.py
aidelml_visual/input/: train.csv
aideml/: run_aide.py
db/: connection.py  models.py  run.py
db/migrations/: 001_create_tables.py  002_add_pgvector.py  003_seed_domains.py  004_create_queries_table.py
db/model/: query.py  tool.py
domains/scripts/: extract_source_tables.py
dspy/: TRAINSET.py  grimoire_dspy.py
dspy_data/: TRAINSET.py  grimoire_dspy.py
file_to_ classification/: file_to_ classification.py
genareted_html/: tesxaa.html
scripts/: batch_extract.py  clean_data.py  distiller.py  export_by_table.py  popular_combos.py  popular_tables.py  run_extractor.py  token_count.py  write_to_db.py
table_domain/: domains.py  taxonomy_output.csv  taxonomy_registry.json
table_domain/old_stuff/: taxonomy_output_1.csv  taxonomy_output_fixed.csv
taxonomy_weird_solution/: solution.py
taxonomy_weird_solution/input/: data_description.txt  train.csv
test_scripts/: query_to_text.py  read_parquet.py  sql_intent_processor_batched.py
tool_extractor/: extractor.py  prompts.py  registry.py
(+2 files in other folders)
