[project]
name = "cluster"
version = "0.1.0"
description = " tools"
authors = [
    {name = "ifechukwudaniel.eth",email = "mailidanielifechukwu@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
